resources/css/style.css
/* Universal */
html {
    font-size: 16px;
}

body {
    font-family: Arial, Helvetica, sans-serif;
    line-height: 1.5rem;
    background-color: #f0f0f0;
}

section:nth-child(odd) {
    background-color: #d4d4d4;
}

#high-light {
    font-weight: bold;
    color: #646464;
}

a {
    text-decoration: none;
}

.main-section-heading {
    font-weight: bold;
    font-size: 2.2rem;
    text-align: center;
    padding-top: 2rem;
}

.main-content {
    display: flex;
}

.main-content-info {
    width: 60%;
    margin: 2rem 1.5rem;
}

.main-info,
.main-info p {
    margin: 2rem 0;
}

.main-info h1 {
    font-weight: bold;
    font-size: 2.5rem;
}

.main-content-info img {
    width:100%;
}

.main-content-info video {
    width:100%;
}
.main-topics {
    display: flex;
    flex-direction: column;
    align-content: stretch;
    width: 40%;
    margin-top: 1rem;
}

.topic {
    display: flex;
    align-items: center;
}

.topic img {
    margin: 1rem;
    width: 35%;
    height: auto;
}

.topic-info {
    width: 65%;
}

.topic-info h1{
    font-size: 1.5rem;
    font-weight: bold;
}

.topic-info h1,
.topic-info p,
.topic-info a {
    margin: 0.5rem;
}

@media only screen and (max-width: 480px) {
    .main-content-info img,
    .main-info,
    .main-topics {
        display: none;
    }
    hr {
        display: none;
    }
}

/* Header Content */
.main-header {
    display: flex;
    align-items: center;
    height: 4rem;
    position: fixed;
    background-color: #fff;
    width: 100%;
}

.logo {
    display: flex;
    flex: 1;
    align-items: center;
    margin: 0 1.5rem;
    color: #c9c9c9;
}

.logo h1 {
    font-size: 1.5rem;
}

nav ul {
    display: flex;
}

ul li {
    margin: 0 0.5rem;
}

.mobile-nav-bar {
    display: none;
}

@media only screen and (max-width: 480px) {
    nav,
    .logo {
        display: none;
    }
    .main-header{
        padding: 0;
    }
    .mobile-nav-bar {
        display: flex;
        margin: auto;
    }
    .mobile-nav-bar ul li {
        margin: 0.5rem 2rem;
    }
}

/* Banner Section */
.container {
    background-color: #d4d4d4;
    padding-top: 4rem;
    width: 100%;
}

.main-banner-content {
    display: flex;
    align-items: center;
}

.main-banner-content img {
    width: 57.5%;
    margin: 2rem 1.5rem;
}

.banner-info {
    width: 350px;
    display: flex;
    flex-direction: column;
    align-self: center;
    line-height: 2.5rem;
    margin-left: 1.5rem;
    color: #646464;
}

.banner-info h1 {
    font-size: 2.2rem;
    font-weight: 800;
}

.banner-info p {
    font-weight: bold;
}

.banner-info span {
    text-align: center;
}

.banner-info h1,
.banner-info p,
.banner-info span {
    margin: 1.5rem 0;
}

.button {
    background-color: #646464;
    color: #fff;
    padding: 0.5rem 5rem;
}

@media only screen and (max-width: 480px) {
    .main-banner-content {
        display: block;
    }
    .main-banner-content img {
        margin: 0;
        width: 100%;
    }
}

/* On Campus Content */
.orientation-topics .topic:last-child {
    background-color: #d4d4d4;
}

.mobile-orientation-topics {
    display: none;
}

@media only screen and (max-width: 480px) {
    .mobile-orientation-topics {
        display: flex;
        flex-direction: column;
    }
    .topic {
        flex-direction: column;
        margin-bottom: 4rem;
    }
    .topic-info {
        width: 75%;
    }
    .topic img {
        width: 85%;
    }
}

/* Online Section */
.online-content {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    margin: auto;
}

figure {
    margin: 2rem 1rem;
    width: 25%;
    background-color: #fff;
}

figcaption {
    margin: 1rem;
}
figcaption h1 {
    font-weight: bold;
    font-size: 1.2rem;
}

figure img {
    width: 100%;
    height: auto;
}

@media only screen and (max-width: 480px) {
    figure img,
    figcaption p {
        display: none;
    }
    figure {
        width: 90%;
        margin: 0.5rem 1rem;;
    }
    figcaption {
        padding: 1rem;
        margin: 0;
        background-color: #646464;
    }
    .online-content {
        flex-direction: column;
        padding: 2rem 0; 
    }
}

/* Thesis Section */
.thesis-topics .topic:first-child {
    background-color: #d4d4d4;
}

.main-content .thesis-topics {
    margin-top: 1rem;
}

@media only screen and (max-width: 480px) {
    .main-content-info {
        width: 100%;
        margin: 2rem 0;
    }
}

/* Footer Content */
footer {
    margin: 1rem 1.5rem;
}

.mobile {
    float: right;
}

@media only screen and (max-width: 480px) {
    .mobile {
        display: none;
    }
}

